--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .divider:after,
 .divider:before {
 content: "";
@@ -16,15 +17,18 @@ height: calc(100% - 73px);
 .form-control{
     width:300px !important;
 }
-label{
+#loginForm label{
   display:none !important;
 }
-label.error{
+#loginForm label.error{
   display:block !important;
     color: red;
 }
 .sign-up-link{
   text-decoration:none;
+}
+.blog-container .blog-wrapper{
+  border: 1px solid gray;
 }
 
 
