--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -15,6 +15,18 @@
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+
+{{#if admin}}
+{{>adminHeader}}
+{{else}}
+{{>userHeader}}
+{{/if}}
   {{{body}}}
+  <script>
+    $(document).ready(()=>{
+      setTimeout(()=>{$('.alert').toggle()
+      },2000)
+    })
+  </script>
 </body>
 </html>
