--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 .divider:after,
@@ -30,7 +31,37 @@ height: calc(100% - 73px);
 .blog-container .blog-wrapper{
   border: 1px solid gray;
 }
+/*home page */
+h1,h4{
+  font-family: 'Montserrat', sans-serif;
+}
+.row{
+  padding:50px 0;
+}
+.seperator{
+  margin-bottom: 30px;
+  width:35px;
+  height:3px;
+  background:#777;
+  border:none;
+}
+.title{
+  text-align: center;
+  
+  .row{
+    padding: 50px 0 0;
+  }
+  
+  h1{
+    text-transform: uppercase;
+  }
+  
+  .seperator{
+    margin: 0 auto 10px;
+  }
+}
 
+  /*--*/
 
 @media (max-width: 450px) {
 .h-custom {
