--- a/views/admin/adminLogin.hbs
+++ b/views/admin/adminLogin.hbs
@@ -101,7 +101,7 @@
                     <span class="text-danger">{{err.message}}</span>
                     {{/if}}
                         <div class="form-group">
-                            <label class="form-control-label text-muted">Username</label>
+                            <label class="form-control-label text-muted">email</label>
                             <input type="email" id="email" name="email" placeholder="Email Address" class="form-control"
                                 required>
                         </div>
