--- a/views/admin/update-user.hbs
+++ b/views/admin/update-user.hbs
@@ -3,13 +3,13 @@
     <div class="card px-1 py-4">
         <div class="card-body">
             <form action="/admin/update_user_data" method="post">
-            <div class="row">
+            <div class="row p-0">
                 <div class="col-sm-12">
                     <div class="form-group">
                         <label for="name">User Name</label>  <input class="form-control mb-3 " type="text" name="userName" value="{{userData.userName}}"> </div> 
                 </div>
             </div>
-            <div class="row">
+            <div class="row p-0">
                 <div class="col-sm-12">
                     <div class="form-group">
                         <label for="name">Email</label>  <input class="form-control mb-3" name="email" type="text"  value="{{userData.email}}">
@@ -17,14 +17,14 @@
                 </div>
             </div>
             
-            <div class="row mb-3">
+            <div class="row mb-3 p-0">
                 <div class="col-sm-12">
                     <div class="form-group">
                         <label for="name">Password</label>  <input class="form-control" name="password" type="password"> 
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row p-0">
                 <div class="col-sm-12">
                     <div class="form-group">
                     <input class="mb-3" name="_id" type="text"  value="{{userData._id}}" style="width: 0; height:0; border:none;">
